# Faye

./: .env.example  .gitignore  FAYE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/faye/: __init__.py  agent.py  capabilities.py  child_entry.py  cli.py  commands.py  memory.py  models.py  orchestrator.py  provider.py  runtime.py  safety.py  voice.py  workspace.py
src/faye/assets/: SOUL.md  __init__.py  faye.yaml
tests/: test_agent_runtime.py  test_cli.py  test_commands.py  test_independence.py  test_orchestrator.py  test_provider.py  test_runtime.py  test_safety_memory.py  test_voice.py  test_workspace.py
