[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "faye-agent"
version = "1.0.0"
description = "Production autonomous AI agent powered by the Hermes Agent runtime"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "ANONYMOUSZED-beep"}]
dependencies = [
  "hermes-agent[all]==0.18.2",
  "pyyaml==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.10",
]

[project.scripts]
faye = "faye.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/faye"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
