[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "faye-agent"
version = "0.1.0"
description = "Fast, voice-first, self-improving multi-agent assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ANONYMOUSZED-beep"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "ruff==0.12.4",
]

[project.scripts]
faye = "faye.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/faye"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
